nearby sessions added not tested
