# server/api/openapi.yaml
@@ -382,6 +382,34 @@ paths:
         "404":
           description: No sessions found
       x-swagger-router-controller: Session
+  /session/getAvailableSessions/{userId}:
+    get:
+      tags:
+      - sessions
+      summary: Get all not yet approved upcoming sessions for volunteer
+      operationId: getAvailableSessions
+      parameters:
+      - name: userId
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: All available sessions near the specified volunteer
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Session'
+                x-content-type: application/json
+        "404":
+          description: No sessions found
+      x-swagger-router-controller: Session
+  
   /hamal:
     post:
       tags:
